--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
 *~
+*.o
 *.sw?
+config.*
+.deps
+Makefile
+**/Makefile
+Makefile.in
+**/Makefile.in
+autom4te.cache
+configure
+depcomp
+install-sh
+missing
+src/proto_shell
+stamp-h1
+
