--- a/configure.ac
+++ b/configure.ac
@@ -8,9 +8,9 @@ AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_SRCDIR([src/shell.c])
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_FILES([Makefile src/Makefile])
-
 # Checks for programs.
 AC_PROG_CC
+CFLAGS="-O0"
 
 # Checks for libraries.
 VL_LIB_READLINE
