fix CFLAGS to display all errors

--- a/configure.ac
+++ b/configure.ac
@@ -10,7 +10,7 @@ AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_FILES([Makefile src/Makefile])
 # Checks for programs.
 AC_PROG_CC
-CFLAGS="-O0"
+CFLAGS="-O0 -Wall"
 
 # Checks for libraries.
 VL_LIB_READLINE
