--- a/configure.ac
+++ b/configure.ac
@@ -21,7 +21,7 @@ AC_CHECK_HEADERS([stdlib.h string.h unistd.h])
 AC_TYPE_PID_T
 
 # Checks for library functions.
-AC_CHECK_FUNCS([strdup])
+AC_CHECK_FUNCS([strdup memset])
 AC_FUNC_FORK
 AC_FUNC_MALLOC
 
