--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,10 @@ config.*
 Makefile
 **/Makefile
 src/proto_shell
+Makefile.in
+aclocal.m4
+autom4te.cache/output.1
+autom4te.cache/requests
+autom4te.cache/traces.1
+config.h.in
 
